# LiteTerm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  index.html  install-deps.sh  package-lock.json  package.json  run.sh  tailwind.config.ts  test_full_flow.sh  test_terminal_resize.sh
.cargo/: config.toml
.claude/commands/: api-debug.md  tag-dev.md
.github/workflows/: build.yml
docs/: TODO.md
docs/api/: http-api.md  tauri-commands.md
docs/competitive/: competitive-analysis.md
docs/design/: architecture.md  http-api-feature.md
docs/issues/: webkitgtk-memory-leak.md
docs/requirements/: feature-list.md
docs/testing/: http-api-test-plan.md  test-plan.md
src/: App.tsx  lib.rs  main.rs  main.tsx  themes.ts  zmodem.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  log_util.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  api_server.rs  config_io.rs  connection.rs  keyring.rs  mod.rs  monitor.rs  process.rs  recording.rs  serial.rs  sftp.rs  ssh.rs  ssh_keys.rs  terminal.rs  tunnel.rs  zmodem.rs  zmodem_handler.rs
src-tauri/src/config/: connections.rs  keyring.rs  settings.rs
src-tauri/src/core/: mod.rs  monitor.rs  net.rs  osc7.rs  sftp.rs  ssh.rs
src-tauri/src/core/zmodem/: decode.rs  detect.rs  encode.rs  mod.rs  receive.rs  send.rs  sender.rs
src/config/: mod.rs
tests/: config_connections_test.rs  config_keyring_test.rs  config_settings_test.rs  core_ssh_test.rs  monitor_parse_test.rs  split_tree_test.rs  test_http_api.sh  transfer_queue_test.rs  zmodem_detect_test.rs  zmodem_frame_test.rs  zmodem_transfer_test.rs
(+65 files in other folders)
